Add templates for login, registration, logout, change and reset password. Start app users, create custom user model

--- a/warehouses/templates/includes/header.html
+++ b/warehouses/templates/includes/header.html
@@ -48,19 +48,15 @@
         <li>
           Пользователь: {{ user.username }}
         </li>
-        {% with request.resolver_match.view_name as view_name %}
         <li class="nav-item"> 
-          <a class="nav-link {% if view_name == 'users:logout' %} active {% endif %}" 
-          href=""> Выйти </a>
+          <a class="nav-link" href="{% url 'users:logout' %}"> Выйти </a>
         </li>
-        {% endwith %}
         {% else %}
-        {% with request.resolver_match.view_name as view_name %}
         <li class="nav-item"> 
-          <a class="nav-link link-light {% if view == 'users:login' %} active {% endif %}" 
-          href=""> Войти </a>
+          <a class="nav-link link" href="{% url 'users:login' %}">
+            Войти
+          </a>
         </li>
-        {% endwith %}
         {% endif %}
       {% endwith %}
       </ul>
